# arducam_ble_wifi

./: CMakeLists.txt  Kconfig  README.md  README2.md  arducam_nord_readme.md
boards/shields/: hold.txt
docs/: OFF_TREE_INSTALL.md  PORTING_NOTES.md
drivers/video/: CMakeLists.txt  Kconfig
drivers/video/arducam_nord/: CMakeLists.txt  Kconfig  arducam_nord.c  arducam_nord.c_old  arducam_nord.h  arducam_nord.h_old  arducam_nordc.txt  arducam_nordh.txt
dts/bindings/video/: arducam,nord.yaml
include/drivers/: video-controls.h  video-controls.h_old  video-controlsh.txt  video.h  video.hold  videoh.txt
include/drivers/video/: arducam_nord.h
samples/drivers/video/arducam_nord_wifi_ble_ncs/: CMakeLists.txt  prj.conf  prj.conf.txt  sample.yaml
samples/drivers/video/arducam_nord_wifi_ble_ncs/boards/: nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay  nrf5340dk_nrf5340_cpuapp_ns.conf  nrf5340dk_nrf5340_cpuapp_ns.overlay
samples/drivers/video/arducam_nord_wifi_ble_ncs/child_image/: hci_ipc.conf
samples/drivers/video/arducam_nord_wifi_ble_ncs/include/: app_bluetooth.h  its.h  socket_util.h
samples/drivers/video/arducam_nord_wifi_ble_ncs/src/: app_bluetooth.c  its.c  main.c  socket_util.c  wifi_softap_mode.c  wifi_station_mode.c
samples/drivers/video/arducam_nord_wifi_ble_ncs/sysbuild/: ipc_radio.conf
samples/drivers/video/arducam_nord_wifi_ble_ncs/sysbuild/ipc_radio/: prj.conf
zephyr/: module.yml
